--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E4 js</title>
-</head>
-<body>
-    
-</body>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <title>PokiPedia</title>
+  </head>
+  <body>
+    <div class="container text-center">
+      <h1>Pokipedia</h1>
+      <label for="pokemon-number">Ingrese el número de Pokemon que desee buscar: </label>
+      <input type="number" id="pokemon-number" min="1" max="807" />
+      <button id="search-button" class="btn btn-primary">Buscar</button>
+    </div>
+    <div id="pokemon-container"></div>
+  </body>
+  <script src="index.js"></script>
 </html>
